objects/AnalyticsGenerativeMetadataIndex__dlm.object
<CustomObject>
    <fields>
        <fullName>AssetDataSpaceDeveloperName__c</fullName>
        <label>Asset Data Space</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetSubtype__c</fullName>
        <label>Asset Subtype</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContextField__c</fullName>
        <label>Context Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_RecordId__c</fullName>
        <label>Key Qualifier Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_SourceRecordId__c</fullName>
        <label>Key Qualifier Source Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectCount__c</fullName>
        <label>Object Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedId__c</fullName>
        <label>Related Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedObject__c</fullName>
        <label>Related Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecordId__c</fullName>
        <label>Source Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VectorEmbedding__c</fullName>
        <label>Vector Embedding</label>
        <type>Array</type>
    </fields>
    <fields>
        <fullName>rel_1780147053047_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AnalyticsGenerativeMetadataIndex_Sou_rel</label>
        <referenceTo>AnalyticsGenerativeMetadataChunk__dlm</referenceTo>
        <relationshipLabel>AnalyticsGenerativeMetadataIndex_Sou_rel</relationshipLabel>
        <relationshipName>rel_1780147053047_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>